c3prj1_deck/grade.txt
Grading at Mon Aug 31 22:36:23 UTC 2020
Compiling deck.c
Compiling cards.c
cards.c: In function ‘ranking_to_string’:
cards.c:27:10: error: ‘s’ may be used uninitialized in this function [-Werror=maybe-uninitialized]
   return s;
          ^
cards.c: In function ‘value_letter’:
cards.c:48:11: error: ‘x’ may be used uninitialized in this function [-Werror=maybe-uninitialized]
    return x;
           ^
cards.c: In function ‘suit_letter’:
cards.c:61:10: error: ‘y’ may be used uninitialized in this function [-Werror=maybe-uninitialized]
   return y;
          ^
cards.c: In function ‘print_card’:
cards.c:31:8: error: ‘x’ may be used uninitialized in this function [-Werror=maybe-uninitialized]
   char x;
        ^
cards.c:53:8: error: ‘y’ may be used uninitialized in this function [-Werror=maybe-uninitialized]
   char y;
        ^
cc1: all warnings being treated as errors
Could not compile your cards.c!

Overall Grade: FAILED
